--- a/pandas_vs_polars.ipynb
+++ b/pandas_vs_polars.ipynb
@@ -88,33 +88,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.78 ms ± 41.4 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "82.2 µs ± 1.48 µs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "# Reading data from CSV\n",
     "\n",
     "# Reading data from CSVs is common. Here’s how to do it.\n",
     "\n",
     "# pandas \n",
-    "%timeit pd.read_csv(\"data.csv\")\n",
+    "%timeit pd.read_csv(\"data/tlt.csv\")\n",
     "# 458 ms ± 3.05 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
     "\n",
     "# polars\n",
-    "%timeit pl.scan_csv(\"data.csv\")\n",
+    "%timeit pl.scan_csv(\"data/tlt.csv\")\n",
     "# 3.57 ms ± 4.01 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
     "# If you’ve never seen the output of %timeit before, the first number is the average time it takes to run the operation. In this case pandas took 458 ms per loop and Polars took 3.57 ms per loop.\n",
     "\n",
     "# Polars is 99% faster at reading data from a CSV than pandas."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-02T13:59:39.200505Z",
+     "start_time": "2023-08-02T13:59:29.422255Z"
+    }
    },
    "id": "cd9c390b7d821cae"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "755 µs ± 26.5 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "299 µs ± 13.2 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "# Selecting data\n",
     "\n",
@@ -132,14 +154,27 @@
     "# Notice the difference in syntax. Polars requires the list of columns to selected be wrapped in the pl.col method."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-02T14:00:04.624896Z",
+     "start_time": "2023-08-02T13:59:56.076775Z"
+    }
    },
    "id": "bb26bce12db4e2bb"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.31 ms ± 25.8 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "733 µs ± 34.9 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "# Filtering data\n",
     "\n",
@@ -155,14 +190,27 @@
     "# Polars takes about half the time for simple filter operations."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-02T14:00:21.232815Z",
+     "start_time": "2023-08-02T14:00:04.632597Z"
+    }
    },
    "id": "3e1e02474d5bc99"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "79.2 ms ± 10.5 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "8.23 ms ± 339 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "# Grouping data\n",
     "\n",
@@ -176,14 +224,27 @@
     "# pandas groups and aggregates in 113 ms while Polars does it in 16.5 ms."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-02T14:00:34.409940Z",
+     "start_time": "2023-08-02T14:00:21.233870Z"
+    }
    },
    "id": "ce85b7e00f466c04"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.03 ms ± 34.8 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "65.6 µs ± 916 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "# Adding new columns\n",
     "\n",
@@ -197,14 +258,27 @@
     "# Polars is 98% faster when adding a new column."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-02T14:00:42.210423Z",
+     "start_time": "2023-08-02T14:00:34.410908Z"
+    }
    },
    "id": "1a31102bfe9072ed"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20.3 µs ± 126 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
+      "62.9 µs ± 333 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "# Imputing missing data\n",
     "\n",
@@ -218,14 +292,27 @@
     "# Polars is slower than pandas when filling nulls and nans by about 3x."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-02T14:00:48.981807Z",
+     "start_time": "2023-08-02T14:00:42.209911Z"
+    }
    },
    "id": "7ae400035c732d77"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.72 ms ± 36.1 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "1.63 ms ± 21.2 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "# Sorting data\n",
     "\n",
@@ -239,14 +326,27 @@
     "# pandas and Polars are pretty close in sorting, but Polars is still faster."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-02T14:01:06.813537Z",
+     "start_time": "2023-08-02T14:00:48.981028Z"
+    }
    },
    "id": "5bb0293fa8a4d908"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "118 µs ± 276 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
+      "71 µs ± 399 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculating rolling statistics\n",
     "\n",
@@ -259,7 +359,11 @@
     "# 103 µs ± 323 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-02T14:01:22.182998Z",
+     "start_time": "2023-08-02T14:01:06.814918Z"
+    }
    },
    "id": "c47ed99f24f5b11b"
   },
