--- a/backtest_2k.ipynb
+++ b/backtest_2k.ipynb
@@ -24,20 +24,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'vectorbt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn [1], line 5\u001B[0m\n\u001B[1;32m      3\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mnumpy\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mnp\u001B[39;00m\n\u001B[1;32m      4\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mpandas\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mpd\u001B[39;00m\n\u001B[0;32m----> 5\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mvectorbt\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mvbt\u001B[39;00m\n",
-      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'vectorbt'"
-     ]
-    }
-   ],
+   "execution_count": 2,
+   "outputs": [],
    "source": [
     "import pytz\n",
     "from datetime import datetime, timedelta\n",
@@ -48,11 +36,117 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-09T13:13:29.241287Z",
-     "start_time": "2023-09-09T13:13:26.981968Z"
+     "end_time": "2023-09-09T13:14:17.609859Z",
+     "start_time": "2023-09-09T13:14:13.848497Z"
     }
    },
    "id": "f0f4b57b7cccaa70"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "symbols = [\n",
+    "    \"META\",\n",
+    "    \"AMZN\",\n",
+    "    \"AAPL\",\n",
+    "    \"NFLX\",\n",
+    "    \"GOOG\",\n",
+    "]\n",
+    "\n",
+    "start_date = datetime(2018, 1, 1, tzinfo=pytz.utc)\n",
+    "end_date = datetime(2021, 1, 1, tzinfo=pytz.utc)\n",
+    "\n",
+    "traded_count = 3\n",
+    "window_len = timedelta(days=12 * 21)\n",
+    "\n",
+    "seed = 42\n",
+    "window_count = 400\n",
+    "exit_types = [\"SL\", \"TS\", \"TP\"]\n",
+    "stops = np.arange(0.01, 1 + 0.01, 0.01)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-09T13:14:24.816056Z",
+     "start_time": "2023-09-09T13:14:24.810417Z"
+    }
+   },
+   "id": "4020c272a210ff18"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "yfdata = vbt.YFData.download(symbols, start=start_date, end=end_date)\n",
+    "ohlcv = yfdata.concat()\n",
+    "\n",
+    "split_ohlcv = {}\n",
+    "\n",
+    "for k, v in ohlcv.items():\n",
+    "    split_df, split_indexes = v.vbt.range_split(\n",
+    "        range_len=window_len.days, n=window_count\n",
+    "    )\n",
+    "    split_ohlcv[k] = split_df\n",
+    "ohlcv = split_ohlcv"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-09T13:15:40.796832Z",
+     "start_time": "2023-09-09T13:15:39.341946Z"
+    }
+   },
+   "id": "c5c9b81274fdcd7b"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Build the momentum strategy\n",
+    "\n",
+    "Our strategy selects the top 3 stocks every split based on their mean return. The strategy equally allocates across the stocks at the beginning of the period, and exits at the end."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "18149942f8222a26"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "momentum = ohlcv[\"Close\"].pct_change().mean()\n",
+    "\n",
+    "sorted_momentum = (\n",
+    "    momentum\n",
+    "    .groupby(\n",
+    "        \"split_idx\", \n",
+    "        group_keys=False, \n",
+    "        sort=False\n",
+    "    )\n",
+    "    .apply(\n",
+    "        pd.Series.sort_values\n",
+    "    )\n",
+    "    .groupby(\"split_idx\")\n",
+    "    .head(traded_count)\n",
+    ")\n",
+    "\n",
+    "selected_open = ohlcv[\"Open\"][sorted_momentum.index]\n",
+    "selected_high = ohlcv[\"High\"][sorted_momentum.index]\n",
+    "selected_low = ohlcv[\"Low\"][sorted_momentum.index]\n",
+    "selected_close = ohlcv[\"Close\"][sorted_momentum.index]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-09T13:16:08.760648Z",
+     "start_time": "2023-09-09T13:16:08.717783Z"
+    }
+   },
+   "id": "77a96fa7e567056a"
   },
   {
    "cell_type": "code",
@@ -62,7 +156,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "4020c272a210ff18"
+   "id": "5ea7c0e016a7e6b1"
   }
  ],
  "metadata": {
