--- a/backtest_2k.ipynb
+++ b/backtest_2k.ipynb
@@ -149,6 +149,101 @@
    "id": "77a96fa7e567056a"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "The code calculates the momentum of each stock symbol based on the percentage change of their closing prices. It then sorts these values within each split and selects the top 3 stocks with the highest momentum.\n",
+    "\n",
+    "Finally, it extracts the prices of the selected stocks using their indices and stores them in selected_open, selected_high, selected_low, and selected_close, respectively."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "b0e46a58c97bfbc3"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Test the order types\n",
+    "\n",
+    "There’s a lot of code here. But we’re essentially creating the exit positions based on the different order types."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "ae6c2d01ad131748"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "entries = pd.DataFrame.vbt.signals.empty_like(selected_open)\n",
+    "entries.iloc[0, :] = True\n",
+    "\n",
+    "sl_exits = vbt.OHLCSTX.run(\n",
+    "    entries,\n",
+    "    selected_open,\n",
+    "    selected_high,\n",
+    "    selected_low,\n",
+    "    selected_close,\n",
+    "    sl_stop=list(stops),\n",
+    "    stop_type=None,\n",
+    "    stop_price=None,\n",
+    ").exits\n",
+    "\n",
+    "ts_exits = vbt.OHLCSTX.run(\n",
+    "    entries,\n",
+    "    selected_open,\n",
+    "    selected_high,\n",
+    "    selected_low,\n",
+    "    selected_close,\n",
+    "    sl_stop=list(stops),\n",
+    "    sl_trail=True,\n",
+    "    stop_type=None,\n",
+    "    stop_price=None,\n",
+    ").exits\n",
+    "\n",
+    "tp_exits = vbt.OHLCSTX.run(\n",
+    "    entries,\n",
+    "    selected_open,\n",
+    "    selected_high,\n",
+    "    selected_low,\n",
+    "    selected_close,\n",
+    "    tp_stop=list(stops),\n",
+    "    stop_type=None,\n",
+    "    stop_price=None,\n",
+    ").exits\n",
+    "\n",
+    "sl_exits.vbt.rename_levels({\"ohlcstx_sl_stop\": \"stop_value\"}, inplace=True)\n",
+    "ts_exits.vbt.rename_levels({\"ohlcstx_sl_stop\": \"stop_value\"}, inplace=True)\n",
+    "tp_exits.vbt.rename_levels({\"ohlcstx_tp_stop\": \"stop_value\"}, inplace=True)\n",
+    "ts_exits.vbt.drop_levels(\"ohlcstx_sl_trail\", inplace=True)\n",
+    "\n",
+    "sl_exits.iloc[-1, :] = True\n",
+    "ts_exits.iloc[-1, :] = True\n",
+    "tp_exits.iloc[-1, :] = True\n",
+    "\n",
+    "sl_exits = sl_exits.vbt.signals.first(reset_by=entries, allow_gaps=True)\n",
+    "ts_exits = ts_exits.vbt.signals.first(reset_by=entries, allow_gaps=True)\n",
+    "tp_exits = tp_exits.vbt.signals.first(reset_by=entries, allow_gaps=True)\n",
+    "\n",
+    "exits = pd.DataFrame.vbt.concat(\n",
+    "    sl_exits,\n",
+    "    ts_exits,\n",
+    "    tp_exits,\n",
+    "    keys=pd.Index(exit_types, name=\"exit_type\"),\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-09T13:18:39.446250Z",
+     "start_time": "2023-09-09T13:18:35.548650Z"
+    }
+   },
+   "id": "a8b17775ef91b10"
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
@@ -156,7 +251,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "5ea7c0e016a7e6b1"
+   "id": "31dcd6fddd8f29e9"
   }
  ],
  "metadata": {
