--- a/inflation_return.ipynb
+++ b/inflation_return.ipynb
@@ -227,13 +227,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Real returns: -0.021885641637931053\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate inflation adjusted (real) returns\n",
+    "real_returns = (1 + nominal_returns) / (1 + inflation) - 1\n",
+    "print(f\"Real returns: {real_returns}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-24T02:42:40.307599Z",
+     "start_time": "2023-09-24T02:42:40.298613Z"
+    }
+   },
+   "id": "16ab1fb50a3b8b38"
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "16ab1fb50a3b8b38"
+   "id": "dbe9dfc3fd2ac0ce"
   }
  ],
  "metadata": {
