--- a/portfolio_analysis.ipynb
+++ b/portfolio_analysis.ipynb
@@ -30,18 +30,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extensions to add: fixedincome@0.1.0a4, crypto@0.1.0a4, fred@0.1.0a4, tradingeconomics@0.1.0a4, stocks@0.1.0a4, economy@0.1.0a4, benzinga@0.1.0a4, news@0.1.0a4, fmp@0.1.0a4, polygon@0.1.0a4, forex@0.1.0a4, oecd@0.1.0a4, intrinio@0.1.0a4\n",
+      "Extensions to remove: crypto@0.1.0a3, stocks@0.1.0a3, intrinio@0.1.0a3, benzinga@0.1.0a3, fmp@0.1.0a3, polygon@0.1.0a3, tradingeconomics@0.1.0a3, alpha_vantage@0.1.0a3, economy@0.1.0a3, fixedincome@0.1.0a3, forex@0.1.0a3, news@0.1.0a3, fred@0.1.0a3\n",
+      "\n",
+      "Building...\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn_extra.cluster import KMedoids\n",
     "import matplotlib.pyplot as plt\n",
-    "from openbb_terminal.sdk import openbb"
+    "import openbb"
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-11-04T15:06:28.532029Z",
+     "start_time": "2023-11-04T15:05:17.605753Z"
+    }
    },
    "id": "7130a09a409f4415"
   },
