--- a/SABR_volatility.ipynb
+++ b/SABR_volatility.ipynb
@@ -19,25 +19,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "\u001B[33mForecasting Toolkit is disabled. To use the Forecasting features please install the toolkit following the instructions here: https://my.openbb.co/app/sdk/installation\u001B[0m\n\n",
-      "text/html": "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #808000; text-decoration-color: #808000\">Forecasting Toolkit is disabled. To use the Forecasting features please install the toolkit following the instructions here: https://my.openbb.co/app/sdk/installation</span>\n\n</pre>\n"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "\u001B[33mPortfolio Optimization Toolkit is disabled. To use the Optimization features please install the toolkit following the instructions here: https://my.openbb.co/app/sdk/installation\u001B[0m\n\n",
-      "text/html": "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #808000; text-decoration-color: #808000\">Portfolio Optimization Toolkit is disabled. To use the Optimization features please install the toolkit following the instructions here: https://my.openbb.co/app/sdk/installation</span>\n\n</pre>\n"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": 2,
+   "outputs": [],
    "source": [
     "# Importing libraries\n",
     "import pandas as pd\n",
@@ -51,15 +34,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-04T15:47:06.000311Z",
-     "start_time": "2023-11-04T15:46:06.751576Z"
+     "end_time": "2023-11-04T15:55:22.035102Z",
+     "start_time": "2023-11-04T15:55:22.029521Z"
     }
    },
    "id": "571644824a47b714"
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
@@ -75,7 +58,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "12e578b34a2f48f7a52f5d1853a21795"
+       "model_id": "546feb9b0cb84df898bf946ba701e62b"
       }
      },
      "metadata": {},
@@ -88,18 +71,28 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "          contractSymbol optionType  expiration  strike  lastPrice     bid  \\\n0     SPY231106C00340000       call  2023-11-06   340.0      95.13   95.04   \n1     SPY231106C00350000       call  2023-11-06   350.0      80.28   85.04   \n2     SPY231106C00360000       call  2023-11-06   360.0      53.31   75.05   \n3     SPY231106C00370000       call  2023-11-06   370.0      59.15   65.05   \n4     SPY231106C00375000       call  2023-11-06   375.0      59.58   60.06   \n...                  ...        ...         ...     ...        ...     ...   \n5804  SPY260116P00580000        put  2026-01-16   580.0     166.41  142.50   \n5805  SPY260116P00600000        put  2026-01-16   600.0     164.70  162.50   \n5806  SPY260116P00640000        put  2026-01-16   640.0     210.00  219.50   \n5807  SPY260116P00660000        put  2026-01-16   660.0     250.00  222.50   \n5808  SPY260116P00670000        put  2026-01-16   670.0     239.45  232.50   \n\n         ask  openInterest  volume  impliedVolatility  \n0      95.26           2.0    24.0           1.384769  \n1      85.26           2.0     1.0           1.244144  \n2      75.27           1.0     0.0           1.109379  \n3      65.27           1.0     3.0           0.972168  \n4      60.27           4.0     4.0           0.905763  \n...      ...           ...     ...                ...  \n5804  147.50           0.0     0.0           0.123910  \n5805  167.50           1.0     3.0           0.134851  \n5806  224.50           0.0     1.0           0.273689  \n5807  227.50           2.0     2.0           0.164559  \n5808  237.50           0.0     2.0           0.169137  \n\n[5809 rows x 10 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>contractSymbol</th>\n      <th>optionType</th>\n      <th>expiration</th>\n      <th>strike</th>\n      <th>lastPrice</th>\n      <th>bid</th>\n      <th>ask</th>\n      <th>openInterest</th>\n      <th>volume</th>\n      <th>impliedVolatility</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>SPY231106C00340000</td>\n      <td>call</td>\n      <td>2023-11-06</td>\n      <td>340.0</td>\n      <td>95.13</td>\n      <td>95.04</td>\n      <td>95.26</td>\n      <td>2.0</td>\n      <td>24.0</td>\n      <td>1.384769</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>SPY231106C00350000</td>\n      <td>call</td>\n      <td>2023-11-06</td>\n      <td>350.0</td>\n      <td>80.28</td>\n      <td>85.04</td>\n      <td>85.26</td>\n      <td>2.0</td>\n      <td>1.0</td>\n      <td>1.244144</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>SPY231106C00360000</td>\n      <td>call</td>\n      <td>2023-11-06</td>\n      <td>360.0</td>\n      <td>53.31</td>\n      <td>75.05</td>\n      <td>75.27</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>1.109379</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>SPY231106C00370000</td>\n      <td>call</td>\n      <td>2023-11-06</td>\n      <td>370.0</td>\n      <td>59.15</td>\n      <td>65.05</td>\n      <td>65.27</td>\n      <td>1.0</td>\n      <td>3.0</td>\n      <td>0.972168</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>SPY231106C00375000</td>\n      <td>call</td>\n      <td>2023-11-06</td>\n      <td>375.0</td>\n      <td>59.58</td>\n      <td>60.06</td>\n      <td>60.27</td>\n      <td>4.0</td>\n      <td>4.0</td>\n      <td>0.905763</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>5804</th>\n      <td>SPY260116P00580000</td>\n      <td>put</td>\n      <td>2026-01-16</td>\n      <td>580.0</td>\n      <td>166.41</td>\n      <td>142.50</td>\n      <td>147.50</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.123910</td>\n    </tr>\n    <tr>\n      <th>5805</th>\n      <td>SPY260116P00600000</td>\n      <td>put</td>\n      <td>2026-01-16</td>\n      <td>600.0</td>\n      <td>164.70</td>\n      <td>162.50</td>\n      <td>167.50</td>\n      <td>1.0</td>\n      <td>3.0</td>\n      <td>0.134851</td>\n    </tr>\n    <tr>\n      <th>5806</th>\n      <td>SPY260116P00640000</td>\n      <td>put</td>\n      <td>2026-01-16</td>\n      <td>640.0</td>\n      <td>210.00</td>\n      <td>219.50</td>\n      <td>224.50</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.273689</td>\n    </tr>\n    <tr>\n      <th>5807</th>\n      <td>SPY260116P00660000</td>\n      <td>put</td>\n      <td>2026-01-16</td>\n      <td>660.0</td>\n      <td>250.00</td>\n      <td>222.50</td>\n      <td>227.50</td>\n      <td>2.0</td>\n      <td>2.0</td>\n      <td>0.164559</td>\n    </tr>\n    <tr>\n      <th>5808</th>\n      <td>SPY260116P00670000</td>\n      <td>put</td>\n      <td>2026-01-16</td>\n      <td>670.0</td>\n      <td>239.45</td>\n      <td>232.50</td>\n      <td>237.50</td>\n      <td>0.0</td>\n      <td>2.0</td>\n      <td>0.169137</td>\n    </tr>\n  </tbody>\n</table>\n<p>5809 rows × 10 columns</p>\n</div>"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "symbol = \"SPY\"\n",
     "expiration = \"2026-01-16\"\n",
-    "spy = openbb.stocks.options.chains(symbol, source=\"YahooFinance\")"
+    "spy = openbb.stocks.options.chains(symbol, source=\"YahooFinance\")\n",
+    "spy"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-04T15:47:19.780926Z",
-     "start_time": "2023-11-04T15:47:10.725369Z"
+     "end_time": "2023-11-04T15:56:17.815919Z",
+     "start_time": "2023-11-04T15:55:55.017784Z"
     }
    },
    "id": "df288ad96f477bf"
