add comment backtest

--- a/walk_forward_backtest.ipynb
+++ b/walk_forward_backtest.ipynb
@@ -598,6 +598,7 @@
     "            return\n",
     "        \n",
     "        # we retrain the model each 200 days\n",
+    "        # we only use the last 600 days to train the model\n",
     "        if len(self.data) % self.coef_retrain == 0:\n",
     "            X_train = self.data.df.iloc[-self.n_train:, :-1]\n",
     "            y_train = self.data.df.iloc[-self.n_train:, -1]\n",
@@ -654,6 +655,40 @@
     "collapsed": false
    },
    "id": "b7443b47a35bcb79"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### interpret the strategy performance"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c2af008c81a36d1e"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "bt.plot()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "3d58bce25f269aa5"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "bt_unanchored.plot()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "67b6dac574f28d57"
   }
  ],
  "metadata": {
